added test data class